--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: -1; /*putting the nav behind the icon create a layered effect*/
 }
 /*Add text in the heading*/
 .header-text{
@@ -377,12 +377,12 @@ form input, form textarea{
     color: #ff004f;
 }
 /*Responsive nav bar*/
-nav .fa-solid{
+nav .fas{
     display: block;
     font-size: 25px;
 }
 
-nav ul .fa-solid{
+nav ul .fas{
     position: absolute;
     top: 25px;
     left: 25px;
@@ -403,7 +403,7 @@ nav ul li{
     display: block;
     margin: 25px;
 }
-nav ul .fa-solid{
+nav ul .fas{
     position: absolute;
     top: 25px;
     left: 25px;
@@ -411,25 +411,24 @@ nav ul .fa-solid{
 }
 
 /*Responsive design for small screens*/
-@media only screen and (max-width: 600px) {
-    /* Your responsive styles for small screens go here */
-    #header {
+@media only screen and(max-width: 600px){
+    #header{
         background-image: url(images/banner-image.jpg);
     }
-    .header-text {
+    .header-text{
         margin-top: 100%;
         font-size: 16px;
     }
-    .header-text h1 {
+    .header-text h1{
         font-size: 30px;
     }
-    nav ul .fa-solid {
+    nav ul .fas{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
     }
-    nav ul {
+    nav ul{
         background: #000000;
         position: fixed;
         top: 0;
@@ -440,14 +439,16 @@ nav ul .fa-solid{
         z-index: 2;
         transition: right 0.5s;
     }
-    nav ul li {
+    nav ul li{
         display: block;
         margin: 25px;
     }
-    nav ul .fa-solid {
+    nav ul .fas{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
     }
+    
 }
+
