--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 /* ----- VARIABLES ----- */
 :root{
-    --body-color: rgb(250, 250, 250);
+    --body-color: #eaf4f4;
     --color-white: rgb(255, 255, 255);
 
     --text-color-second: rgb(68, 68, 68);
@@ -211,18 +211,28 @@ nav{
     margin-top: 5em;
     gap: 30px;
 }
-.icon{
+.icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 56px;
+    height: 56px;
     border-radius: 50%;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    background: #fff;
+    transition: background 0.3s, color 0.3s;
 }
-.icon:hover{
-    color: var(--first-color);
+.icon i {
+    font-size: 32px;
+    color: #1da1f2;
+    transition: color 0.3s;
+}
+.icon:hover {
+    background: var(--second-color);
+}
+.icon:hover i {
+    color: #fff;
 }
 
 /* ----- FEATURED IMAGE BOX ----- */
@@ -328,16 +338,14 @@ h3{
     font-size: 15px;
     color: #777;
 }
-.about-btn button{
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    background: var(--first-color);
-    color: var(--color-white);
-    border-radius: 30px;
+.about-btn {
+    position: static;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
-.about-btn button:hover{
-    background: var(--first-color-hover);
+.about-btn .btn {
+    position: static;
 }
 
 /* ----- ABOUT / SKILLS BOX ----- */
